syntax = "proto3";
package allocation.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "allocation/v1/genesis.proto";
import "allocation/v1/allocation.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/peggyjv/sommelier/v3/x/allocation/types";

// Query defines the gRPC querier service for the allocation module.
service Query {
    // QueryParams queries the allocation module parameters.
    rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
        option (google.api.http).get = "/sommelier/allocation/v1/params";
    }
    // QueryAllocationPrecommit queries the validator prevote in the current voting period
    rpc QueryAllocationPrecommit(QueryAllocationPrecommitRequest) returns (QueryAllocationPrecommitResponse) {
        option (google.api.http).get = "/sommelier/allocation/v1/precommits/{validator}/{cellar}";
    }
    // QueryAllocationPrecommits queries all allocation precommits in the voting period
    rpc QueryAllocationPrecommits(QueryAllocationPrecommitsRequest) returns (QueryAllocationPrecommitsResponse) {
        option (google.api.http).get = "/sommelier/allocation/v1/precommits";
    }
    // QueryAllocationCommit queries the validator vote in the current voting period
    rpc QueryAllocationCommit(QueryAllocationCommitRequest) returns (QueryAllocationCommitResponse) {
        option (google.api.http).get = "/sommelier/allocation/v1/commits/{validator}/{cellar}";
    }
    // QueryAllocationCommits queries all validator allocation commits
    rpc QueryAllocationCommits(QueryAllocationCommitsRequest) returns (QueryAllocationCommitsResponse) {
        option (google.api.http).get = "/sommelier/allocation/v1/commits";
    }
    // QueryVotePeriod queries the heights for the current voting period (current, start and end)
    rpc QueryCommitPeriod(QueryCommitPeriodRequest) returns (QueryCommitPeriodResponse) {
        option (google.api.http).get = "/sommelier/allocation/v1/commit_period";
    }
    // QueryCellars returns all cellars and current tick ranges
    rpc QueryCellars(QueryCellarsRequest) returns (QueryCellarsResponse) {
        option (google.api.http).get = "/sommelier/allocation/v1/cellars";
    }
}

// QueryParamsRequest is the request type for the Query/Params gRPC method.
message QueryParamsRequest {}

// QueryParamsRequest is the response type for the Query/Params gRPC method.
message QueryParamsResponse {
    // allocation parameters
    Params params = 1 [(gogoproto.nullable) = false];
}

// QueryAllocationPrecommitRequest is the request type for the Query/AllocationPrecommit gRPC method.
message QueryAllocationPrecommitRequest {
    // validator operator address
    string validator = 1;
    // cellar contract address
    string cellar = 2;
}

// QueryAllocationPrecommitResponse is the response type for the Query/AllocationPrecommit gRPC method.
message QueryAllocationPrecommitResponse {
    // prevote submitted within the latest voting period
    AllocationPrecommit precommit = 1;
}

// QueryAllocationPrecommitsRequest is the request type for the Query/AllocationPrecommits gRPC method.
message QueryAllocationPrecommitsRequest {}

// QueryAllocationPrecommitResponse is the response type for the Query/AllocationPrecommits gRPC method.
message QueryAllocationPrecommitsResponse {
    // prevote submitted within the latest voting period
    repeated AllocationPrecommit precommits = 1;
}

// QueryAllocationCommitRequest is the request type for the Query/QueryallocationDataVote gRPC method.
message QueryAllocationCommitRequest {
    // validator operator address
    string validator = 1;
    // cellar contract address
    string cellar = 2;
}

// QueryAllocationCommitResponse is the response type for the Query/QueryallocationDataVote gRPC method.
message QueryAllocationCommitResponse {
    // vote containing the allocation feed submitted within the latest voting period
    Allocation commit = 1;
}

// QueryAllocationCommitsRequest is the request type for the Query/QueryAllocationCommits gRPC method.
message QueryAllocationCommitsRequest {
}

// QueryAllocationCommitsResponse is the response type for the Query/QueryAllocationCommits gRPC method.
message QueryAllocationCommitsResponse {
    // votes containing the allocation feed submitted within the latest voting period
    repeated Allocation commits = 1;
}

// QueryCommitPeriodRequest is the request type for the Query/QueryCommitPeriod gRPC method.
message QueryCommitPeriodRequest {}

// QueryCommitPeriodResponse is the response type for the Query/QueryCommitPeriod gRPC method.
message QueryCommitPeriodResponse {
    // block height at which the query was processed
    int64 current_height    = 1;
    // latest vote period start block height
    int64 vote_period_start = 2;
    // block height at which the current voting period ends
    int64 vote_period_end   = 3; 
}

// QueryCellarsRequest is the request type for Query/QueryCellars gRPC method.
message QueryCellarsRequest {}

// QueryCellarsResponse is the response type for Query/QueryCellars gRPC method.
message QueryCellarsResponse {
    repeated Cellar cellars = 1;
}
